<resources>
    <string name="app_name">FinalProjectGrabDriver</string>

    <!-- text view -->
    <string name="label_logo">Grab Driver</string>
    <string name="label_instruction_enter_code">Enter the 6-digit code sent to</string>
    <string name="label_phone_number">+84 %1$s</string>
    <string name="label_question_receive_code">Didn\'t receive it ?</string>
    <string name="label_request_a_new_code">Request a new code in %1$s</string>
    <string name="label_request_new_code">
    <![CDATA[
        <html>
            <body>
              <pre><u><font color="#4CAF50">Request new code</font></u></pre>
            </body>
        </html>
    ]]>
    </string>
    <string name="title_activity_driver">Driver Map</string>

    <!--content description image -->
    <string name="cdi_logo">logo</string>

    <!-- title button -->
    <string name="title_login">LOGIN</string>
    <string name="title_vn">+84</string>

    <!-- hint edit text -->
    <string name="hint_name">Full name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_code">000000</string>
    <string name="hint_search">Search</string>

    <!-- label menu -->
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>

    <!-- error message -->
    <string name="error_full_name">Enter full name</string>
    <string name="error_email">Enter a valid email</string>
    <string name="error_phone">Enter a valid phone</string>
    <string name="error_verification_code">Enter a valid verification code</string>

    <!-- content snack bar-->
    <string name="snack_online">You are online</string>
    <string name="snack_offline">You are offline</string>

    <!-- setting -->
    <string name="settings">Settings</string>
    <string name="setting_dialog_title_map_type">Display Map </string>
    <string name="setting_dialog_key_map_type">key_map_type</string>
    <string name="setting_dialog_summary_map_type">Specify google map type for displays</string>

    <string name="setting_switch_title_working">Working</string>
    <string name="setting_switch_key_working">key_working</string>
    <string name="setting_switch_summary_working">Click to switch online or offline</string>

</resources>
